--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <p>This is the first file in my new Git Repo.</p>
 <div><img src="pmfkyp1.png" alt="Hello World from Space"
     style="width:100%;max-width:960px"></div>
+<p>A new line in our file!</p>
+<div><img src="tt1.png" alt="Hello Git" style="width:100%;max-width:640px">
+</div>
 
 </body>
 </html>
