--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
-<div><img src="pmfkyp1.png" alt="Hello World from Space"
-    style="width:100%;max-width:960px"></div>
+<div><img src="foota1.jpg" alt="Hello World from Space"
+    style="width:25%;max-width:100px"></div>
 <p>A new line in our file!</p>
-<div><img src="tt1.png" alt="Hello Git" style="width:100%;max-width:640px">
+<div><img src="tt1.png" alt="Hello Git" style="width:25%;max-width:100px">
 </div>
 
 </body>
