--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="container" style="background-color:#f1f1f1">
         <div class="row">
           <div class="column-33">
-            <img src="Fatu.png" alt="App" width="335" height="471">
+            <img src="fatu.png" alt="App" width="335" height="471">
           </div>
           <div class="column-66">
             <h1 class="xlarge-font"><b>Clarity</b></h1>
