--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
 
@@ -57,6 +58,9 @@
           </div>
         </div>
       </div>
+      <footer class="w3-center w3-black w3-panel w3-padding-16">
+        <p>Powered by Hassane Bah</p>
+        </footer>
 
 </body>
 </html>
