--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       
       <!-- The App Section -->
-      <div class="container">
+      <div class="container" style="background-color:#f1f1f1">
         <div class="row">
           <div class="column-66">
             <h1 class="xlarge-font"><b>The App</b></h1>
@@ -45,7 +45,7 @@
       </div>
       
       <!-- The App Section -->
-      <div class="container">
+      <div class="container" style="background-color:#f1f1f1">
         <div class="row">
           <div class="column-66">
             <h1 class="xlarge-font"><b>The App</b></h1>
