--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
   
    
-      <footer class="w3-center w3-black w3-panel w3-padding-16">
+      <footer class="w3-center w3-light-grey w3-panel w3-padding-16">
         <p>Powered by Hassane Bah</p>
         </footer>
 
