--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </div>
         <div class="hero">
             <img class="hero_img"   width="500px" height="500px" src="images/skyblue.jpg"  alt="The sky is blue">
+            <img src="images/background1.webp" >
+
         </div>
     </div><!-- end of main or body content -->
 </body>
