--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       
       <div class="footer">
-        <h2>Copywright &#169 2023. All rights reserved.<img src="images/mylogo.svg" alt="mylogo"></h2>
+        <h2> &#169 2023 <img src="images/mylogo.svg" alt="mylogo">. All rights reserved.</h2>
       </div>
 </body>
 </html>
